--- a/OnlineShopping Application/OnlineShopping Application/OnlineShopping Application.csproj
+++ b/OnlineShopping Application/OnlineShopping Application/OnlineShopping Application.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Models\ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ViewModels\ManageViewModels.cs" />
+    <Compile Include="Models\ViewModels\StockViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
