--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,8 @@ build/
 [Bb]in/
 [Oo]bj/
 .vs/
-Image/
+Image/Product/
+
 
 # Enable "build/" folder in the NuGet Packages folder since NuGet packages use it for MSBuild targets
 !packages/*/build/
