--- a/OnlineShopping Application/OnlineShopping Application/OnlineShopping Application.csproj
+++ b/OnlineShopping Application/OnlineShopping Application/OnlineShopping Application.csproj
@@ -250,6 +250,10 @@
     <Compile Include="Migrations\201809271814427_Nine.Designer.cs">
       <DependentUpon>201809271814427_Nine.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201809271835154_Ten.cs" />
+    <Compile Include="Migrations\201809271835154_Ten.Designer.cs">
+      <DependentUpon>201809271835154_Ten.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\EntityModels\Cart.cs" />
     <Compile Include="Models\EntityModels\CartToDeliver.cs" />
@@ -262,6 +266,7 @@
     <Compile Include="Models\ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ViewModels\ManageViewModels.cs" />
+    <Compile Include="Models\ViewModels\OrderListViewModel.cs" />
     <Compile Include="Models\ViewModels\PaymentPageViewModel.cs" />
     <Compile Include="Models\ViewModels\ProductDetailViewModel.cs" />
     <Compile Include="Models\ViewModels\StockViewModel.cs" />
@@ -351,12 +356,12 @@
     <Content Include="Views\Cart\UserCartList.cshtml" />
     <Content Include="Views\User\EditUserDetail.cshtml" />
     <Content Include="Views\User\ShowUserDetail.cshtml" />
+    <Content Include="Views\CheckOut\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Image\Product\" />
     <Folder Include="Image\User\" />
-    <Folder Include="Views\CheckOut\" />
     <Folder Include="Views\Order\" />
   </ItemGroup>
   <ItemGroup>
@@ -399,6 +404,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201809271814427_Nine.resx">
       <DependentUpon>201809271814427_Nine.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201809271835154_Ten.resx">
+      <DependentUpon>201809271835154_Ten.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
